fix: add title class to h2 in AboutMe component and center align title

--- a/src/components/AboutMe/styles.css
+++ b/src/components/AboutMe/styles.css
@@ -14,13 +14,16 @@
     margin: 0 auto;
     max-width: 50rem;
     padding: 1.5rem;
-    text-align: center;
 
     @media (width > 48rem) {
       flex-direction: row;
       gap: 1rem;
       padding: 2rem;
       text-align: left;
+    }
+
+    .title {
+      text-align: center;
     }
 
     .profile-photo {
